# lab10_project

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.cursor/.rules/: architecture.mdc  guardrails.mdc  implementation-agent.mdc  security.mdc  testing.mdc
app/: __init__.py  config.py  dependencies.py  logging_config.py  main.py  template_filters.py
app/agent/: checkpointer.py  compaction.py  embeddings.py  graph.py  langfuse.py  memory_classifier.py  memory_flush.py  model.py  session_title.py  state.py
app/db/: client.py  properties_client.py
app/middleware/: auth.py  token_cache.py
app/pages/: __init__.py  chat.py  index.py  onboarding.py  settings.py
app/routers/: __init__.py  auth.py  chat.py  sessions.py
app/services/: attachments.py  hitl.py  memory_policy.py  onboarding_session.py
app/templates/: base.html  chat.html  settings.html
app/tools/: __init__.py  (+5 more)
docs/: agent-system-prompt.md  extending.md  implementation-summary.md  mcp-extension-example.md  technical-brief.md  ui-design.md
evals/: README.md  faq_cases.json  run_faq_experiment.py
migrations/: 00001_initial_schema.sql  00002_session_management.sql  00003_scheduled_tasks.sql  00004_long_term_memory.sql  00005_tool_call_model_id.sql  00006_agent_total_scope.sql  00007_sessions_title_and_archive.sql  00008_agent_messages_index.sql  00009_tune_match_memories_probes.sql  00010_drop_orphaned_scheduled_tasks.sql
scripts/: backfill_property_embeddings.py  check_connections.py  init_template.py  start_server.sh  stop_server.sh
tests/: conftest.py
(+95 files in other folders)
