[project]
name = "lab10-project"
version = "0.1.0"
description = "Lab10 Project - agente conversacional sobre FastAPI + LangGraph + Supabase"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "itsdangerous>=2.2",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "httpx>=0.27",
  "supabase>=2.0",
  "langgraph>=0.2",
  "langchain-core>=0.3",
  "langchain-openai>=0.2",
  "langgraph-checkpoint-postgres>=1.0",
  "langfuse>=3.0",
  "psycopg[binary]>=3.3.4",
  "psycopg-pool>=3.2",
  "langchain>=1.3.11",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "anyio>=4.4",
  "ruff>=0.5",
  "mypy>=1.10",
]
scripts = [
  "asyncpg>=0.29",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008", "UP017"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
strict_optional = true

[[tool.mypy.overrides]]
module = ["app.db.queries.*"]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
